fixing too long words bug with better solution

--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -124,7 +124,7 @@ p.latest-achievement {
 }
 
 .answer, .question {
-    word-break: break-all;
+    word-wrap: break-word;
 }
 
 .volatile-score {
